# tuning-workbench-synth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml  tuning-workbench-synth.jucer
Resources/: README.md  tws-png.sh
Resources/factory_patches/: Bamboo_Flute.twsxml  Brass_Lead.twsxml  Discovery.twsxml  Facets_15.twsxml  Fibonacci_Plucks.twsxml  INIT_Saw.twsxml  INIT_Sine.twsxml  INIT_Square.twsxml  Just_Frippertonics.twsxml  Lusheng_Flute.twsxml  Marimba.twsxml  On_Whole_Tones.twsxml  Pluckedelica.twsxml  README.md  Space Clav.twsxml  Struck String.twsxml  Struck_String.twsxml  Swarm_Andal.twsxml  SwellPulsePad.twsxml  Swell_Pulse_Pad.twsxml  TWS_Init.twsxml  Xenarctica.twsxml
Source/: Constants.h  DSP.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TWSAbout.cpp  TWSAbout.h  TWSKBMGenerator.cpp  TWSKBMGenerator.h  TWSMainPanel.cpp  TWSMainPanel.h  TWSTextAndControls.cpp  TWSTextAndControls.h  TWSTuningGrid.cpp  TWSTuningGrid.h  TWSVoice.cpp  TWSVoice.h  TuningListener.h  version.cpp.in  version.h
scripts/: build-mac-so.sh  build-mac.sh  package-lin.sh  package-mac.sh  projuce-lin-vst2.sh  projuce-lin.sh  projuce-mac-vst2.sh  projuce-mac.sh  release-notes.sh  set-version.sh
scripts/pywb/: Waveforms.ipynb
scripts/pywb/.ipynb_checkpoints/: Waveforms-checkpoint.ipynb
